--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
       <h1>Entrar</h1>
       <form>
         <div class="input-box">
-          <input type="email" placeholder="E-mail ou número de telefone" required>
+          <input type="email" id="email" class="form-control" placeholder="Email ou número de tefefone" required>
+          <label for="email">Email ou número de tefefone</label>
         </div>
 
         <div class="input-box">
-          <input type="password" placeholder="senha" required>
+          <input type="password"  id="password" class="form-control" placeholder="Senha" required>
+          <label for="password" >Senha</label>
         </div>
 
         <div>
